--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,46 @@
+appnope==0.1.3
+asttokens==2.2.1
+backcall==0.2.0
 certifi==2022.12.7
 charset-normalizer==3.1.0
+comm==0.1.2
+debugpy==1.6.6
+decorator==5.1.1
 docker==6.0.1
+executing==1.2.0
 idna==3.4
+ipydatawidgets==4.3.3
+ipykernel==6.21.3
+ipython==8.11.0
+ipywidgets==8.0.4
+jedi==0.18.2
+jupyter_client==8.0.3
+jupyter_core==5.2.0
+jupyterlab-widgets==3.0.5
+matplotlib-inline==0.1.6
+nest-asyncio==1.5.6
+numpy==1.24.2
 packaging==23.0
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+platformdirs==3.1.1
+prompt-toolkit==3.0.38
+psutil==5.9.4
 psycopg2-binary==2.9.5
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.14.0
+python-dateutil==2.8.2
+pythreejs==2.4.2
+pyzmq==25.0.0
 requests==2.28.2
+six==1.16.0
+stack-data==0.6.2
+tornado==6.2
+traitlets==5.9.0
+traittypes==0.2.1
 urllib3==1.26.15
+wcwidth==0.2.6
 websocket-client==1.5.1
+widgetsnbextension==4.0.5
